# skynix-cli

./: README.md  pyproject.toml
skynix_cli/: skynixcli.py
